--- a/package.json
+++ b/package.json
@@ -1,77 +1,53 @@
 {
-  "name": "react-pages-boilerplate",
-  "version": "1.0.0",
-  "description": "Simple boilerplate for working with React, redux, react-router and Github Pages",
-  "private": "true",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
-    "start": "webpack serve",
-    "build": "cross-env NODE_ENV=production webpack --progress --colors",
-    "deploy": "npm run build && gh-pages -d dist",
-    "lint": "eslint src --ext .ts --ext .tsx"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rtivital/react-pages-boilerplate.git"
-  },
-  "author": "Vitaly Rtishchev <rtivital@gmail.com> (http://github.com/rtivital)",
+  "name": "parcel-react-example",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rtivital/react-pages-boilerplate/issues"
+  "scripts": {
+    "start": "cross-env NODE_ENV=development parcel index.html ",
+    "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url /"
   },
-  "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
-    "@mantine/core": "^2.2.0",
-    "@mantine/eslint-config": "2.2.0",
-    "@mantine/hooks": "^2.2.0",
-    "classnames": "^2.3.1",
-    "open-color": "^1.8.0",
-    "prop-types": "^15.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@types/node": "^8.5.1",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/webpack-env": "^1.13.3",
+    "autoprefixer": "^7.2.1",
+    "babel-preset-react-app": "^3.1.0",
+    "cubing": "0.25.7",
+    "lodash.intersection": "^4.4.0",
+    "lodash.isequal": "^4.5.0",
+    "lodash.mapvalues": "^4.6.0",
+    "lodash.pick": "^4.4.0",
+    "parcel": "^2.0.0",
+    "parcel-plugin-typescript": "^0.2.3",
     "react": "^17.0.2",
+    "react-beforeunload": "^2.5.2",
     "react-dom": "^17.0.2",
-    "react-jss": "^10.7.1",
-    "react-router-dom": "^5.2.0",
-    "webpack-bundle-analyzer": "^4.4.2"
+    "tslint": "^5.8.0",
+    "tslint-react": "^3.2.0",
+    "typescript": "^2.6.2"
+  },
+  "postcss": {
+    "modules": false,
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          ">1%",
+          "last 4 versions",
+          "Firefox ESR",
+          "not ie < 9"
+        ],
+        "flexbox": "no-2009"
+      }
+    }
   },
   "devDependencies": {
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "chalk": "^4.1.2",
-    "cname-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.3",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-import-resolver-webpack": "^0.13.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "favicons": "^6.2.2",
-    "favicons-webpack-plugin": "4.2.0",
-    "file-loader": "^6.2.0",
-    "gh-pages": "^3.2.3",
-    "git-repo-name": "^1.0.1",
-    "html-webpack-plugin": "^4.4.1",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "open-browser-webpack-plugin": "^0.0.5",
-    "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-jest": "^27.0.4",
-    "ts-loader": "8.0.14",
-    "typescript": "^4.3.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "@parcel/transformer-sass": "2.3.1",
+    "cross-env": "^5.1.1",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.0.0",
+    "postcss-modules": "^4.3.0"
   }
 }
