--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,33 @@
 {
-  "plugins": [],
-  "include": ["./"],
-  "exclude": ["dist"],
-
+  "compileOnSave": true,
   "compilerOptions": {
-    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "module": "commonjs",
     "target": "es5",
+    "module": "commonjs",
+    "jsx": "react",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "removeComments": true,
+    "strictNullChecks": true,
+    "preserveConstEnums": true,
     "sourceMap": true,
-    "noEmitOnError": true,
-    "types": ["node"],
-    "typeRoots": ["./node_modules/@types", "./types"],
-    "baseUrl": "."
+    "lib": [
+      "es2015",
+      "es2016",
+      "dom"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "types": [
+      "node",
+      "webpack-env"
+    ]
   }
 }
