--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/webpack-env": "^1.13.3",
     "autoprefixer": "^7.2.1",
     "babel-preset-react-app": "^3.1.0",
-    "cubing": "0.25.7",
+    "cubing": "0.25.11",
     "lodash.intersection": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.mapvalues": "^4.6.0",
@@ -25,6 +25,7 @@
     "react": "^17.0.2",
     "react-beforeunload": "^2.5.2",
     "react-dom": "^17.0.2",
+    "stackmat": "^1.1.0",
     "tslint": "^5.8.0",
     "tslint-react": "^3.2.0",
     "typescript": "^2.6.2"
