--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "license": "MIT",
   "scripts": {
     "start": "cross-env NODE_ENV=development parcel index.html ",
-    "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url /"
+    "build": "cross-env NODE_ENV=production parcel build index.html --no-optimize --public-url /"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17",
-    "@types/node": "^8.5.1",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/webpack-env": "^1.13.3",
-    "autoprefixer": "^7.2.1",
-    "babel-preset-react-app": "^3.1.0",
+    "@fortawesome/fontawesome-svg-core": "1.3.0",
+    "@fortawesome/free-solid-svg-icons": "6.0.0",
+    "@fortawesome/react-fontawesome": "0.1.17",
+    "@types/node": "8.5.1",
+    "@types/react": "17.0.39",
+    "@types/react-dom": "17.0.11",
+    "@types/webpack-env": "1.13.3",
+    "autoprefixer": "7.2.1",
+    "babel-preset-react-app": "3.1.0",
     "cubing": "0.25.11",
-    "lodash.intersection": "^4.4.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.mapvalues": "^4.6.0",
-    "lodash.pick": "^4.4.0",
-    "parcel": "^2.0.0",
-    "parcel-plugin-typescript": "^0.2.3",
-    "react": "^17.0.2",
-    "react-beforeunload": "^2.5.2",
-    "react-dom": "^17.0.2",
-    "stackmat": "^1.1.0",
-    "tslint": "^5.8.0",
-    "tslint-react": "^3.2.0",
-    "typescript": "^2.6.2"
+    "lodash.intersection": "4.4.0",
+    "lodash.isequal": "4.5.0",
+    "lodash.mapvalues": "4.6.0",
+    "lodash.pick": "4.4.0",
+    "parcel": "2.0.0",
+    "parcel-plugin-typescript": "0.2.3",
+    "react": "17.0.2",
+    "react-beforeunload": "2.5.2",
+    "react-dom": "17.0.2",
+    "stackmat": "1.1.0",
+    "tslint": "5.8.0",
+    "tslint-react": "3.2.0",
+    "typescript": "2.6.2"
   },
   "postcss": {
     "modules": false,
@@ -46,9 +46,9 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.3.1",
-    "cross-env": "^5.1.1",
-    "path-browserify": "^1.0.1",
-    "postcss": "^8.0.0",
-    "postcss-modules": "^4.3.0"
+    "cross-env": "5.1.1",
+    "path-browserify": "1.0.1",
+    "postcss": "8.0.0",
+    "postcss-modules": "4.3.0"
   }
 }
